# BEV

./: .gitignore  CMakeLists.txt  README.md  multiprocess_plan.md  plan.md
config/: camera_calibration.yaml  config.yaml  config_gst_smoke.yaml
docs/: benchmark_report_2026-02-27.md  mount_orientation_runbook.md  parity_report_2026-02-27_22-59-44.md
include/bev/: bev_warp.hpp
include/camera/: camera_calibration.hpp  camera_ingest.hpp
include/core/: config.hpp  fps_governor.hpp  math_utils.hpp  telemetry.hpp  time_utils.hpp  types.hpp
include/ipc/: control_plane.hpp  descriptors.hpp  frame_pool.hpp  notifier.hpp  pipeline_names.hpp  shared_state.hpp  shm_spsc_ring.hpp  spsc_ring.hpp
include/map/: minimap_builder.hpp
include/motion/: motion_detector.hpp
include/msp/: BetaflightMSP.h  attitude_sync.hpp  betaflight_msp_adapter.hpp  msp_bridge.hpp
include/registration/: registration_refiner.hpp
include/tracking/: keypoint_initializer.hpp  template_tracker.hpp  track_manager.hpp
include/web/: dashboard_renderer.hpp  mjpeg_server.hpp
src/: bev_ctl.cpp  main.cpp  mp_node.cpp
src/bev/: bev_warp.cpp
src/camera/: camera_calibration.cpp  camera_ingest.cpp
src/core/: config.cpp  fps_governor.cpp  math_utils.cpp  telemetry.cpp  time_utils.cpp
src/ipc/: control_plane.cpp  frame_pool.cpp  notifier.cpp  shared_state.cpp  shm_spsc_ring.cpp
src/map/: minimap_builder.cpp
src/motion/: motion_detector.cpp
src/msp/: BetaflightMSP.cpp  attitude_sync.cpp  betaflight_msp_adapter.cpp  msp_bridge.cpp
src/registration/: registration_refiner.cpp
src/tracking/: keypoint_initializer.cpp  template_tracker.cpp  track_manager.cpp
src/web/: dashboard_renderer.cpp  mjpeg_server.cpp
tests/: CMakeLists.txt
tests/integration/: run_parity_validation.sh  test_crash_restart_resilience.cpp  test_minimap_replay.cpp  test_motion_replay.cpp  test_overload_drop_policy.cpp  test_sequence_registration.cpp
tests/soak/: run_soak_pipeline.sh
tests/unit/: test_attitude_sync.cpp  test_bev_warp.cpp  test_camera_calibration.cpp  test_config_validation.cpp  test_control_plane.cpp  test_dashboard_renderer.cpp  test_fps_governor.cpp  test_ipc_descriptors.cpp  test_ipc_frame_pool.cpp  test_ipc_notifier.cpp  test_ipc_protocol_mismatch.cpp  test_ipc_shm_spsc_ring.cpp  test_ipc_spsc_ring.cpp  test_keypoint_initializer.cpp  test_live_velocity_estimator.cpp  test_math_utils.cpp  test_minimap_builder.cpp  test_mjpeg_server.cpp  test_mjpeg_server_lifecycle.cpp  test_motion_threshold.cpp  test_msp_bridge.cpp  test_registration_refiner.cpp  test_shared_state.cpp  test_template_match.cpp  test_track_manager.cpp  test_tracker_coordinates.cpp
tools/: bench_ipc.cpp  bench_pipeline.cpp  profile_hotpaths.sh  run_mp_pipeline.sh
tools/profiling/: profile_pipeline.sh
web/: README.md
web/static/: app.js  index.html  styles.css
